# wasserweise

./: .flake8  .gitignore  20221020_12.csv  20221220_11.csv  API.ipynb  CreateDatabase.py  Database.db  Folium.ipynb  Functions.py  GWL.ipynb  InputDatabase.py  OrganizeWaterLevels.ipynb  Plotting with querying.ipynb  Querying.py  Quivers&Gradients.ipynb  README.md  RealTimeTool.ipynb  Trial.ipynb  WellID.ipynb  app.py  app2.py  app_update.py  contributing.md  debug.py  dfonasdopf  i.py  i_plots.py  pyproject.toml  requirements.txt  requirements1.txt  requirements2.txt  spec-file.txt  streamlit_app.py  style.css  test.py
.ipynb_checkpoints/: Examples-checkpoint.ipynb  GWL-checkpoint.ipynb  OrganizeWaterLevels-checkpoint.ipynb  Plotting with querying-checkpoint.ipynb  Querying-checkpoint.py  WellID-checkpoint.ipynb  test-checkpoint.py
.streamlit/: config.toml
Data/: Database.db  LOG_UPDATE.txt  LOG_UPDATE0.txt  WellID.csv  WellID.xlsx
Data/Databases/: Database.db  DiverID.csv  (+17 more)
Database/: ComplicateQuerying.py  CreateDatabase.py  CreateDatabase_v1.py  Database.db  InputDatabase.py  QueryDatabase.py  Querying.py  Schema.txt  functions.py
Figures/: Schema.txt
JupyterNotebooks/: Examples.html  Examples.ipynb  ExamplesSlides.html  GWL.ipynb
Old/: functions_old.py
Resources/: Untitled.ipynb  app.ipynb  debug.py
SMARTControl/: CreateDatabase.py  queries.py  update.py  utils.py
SMARTControls/: CreateDatabase.py  api.py  utils.py
SmartControl/: CreateDatabase.py  __init__.py  api.py  queries.py  update.py  utils.py
Trials/: Holoviews.ipynb  xarray.ipynb
pages/: 1_📈_Time_series.py  1_🛰️_Potentiometric map.py  1_🛰️_Potentiometric_map.py  2_📈_Time Series.py  2_📈_Time_series.py  2_🛰️_Potentiometric_map.py  3_⚒️_Hydrostratigraphic profiles.py  3_⚒️_Hydrostratigraphic_profiles.py
src/: app.py  app_update.py  utils_dashboard.py
tests/: test_import.py
wasserweise/: __init__.py  update.py  utils.py
(+48 files in other folders)
