[tool.poetry]
name = "wasserweise"
version = "0.1.0"
description = "A Python package for real-time groundwater monitoring"
authors = ["Saulo Silva Vieira <s.vieira@tutamail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
folium = "0.13.0"
geopandas = "0.11.1"
gitpython = "3.1.30"
holoviews = "1.14.8"
hvplot = "0.8.1"
matplotlib = "3.6.2"
mplstereonet = "0.6.2"
numpy = "1.23.1"
pandas = "1.5.0"
panel = "0.13.0"
plotly = "5.9.0"
pygithub = "1.57"
pyproj = "3.4.0"
requests = "2.28.2"
scipy = "1.9.3"
sqlalchemy = "1.4.44"
streamlit = "1.18.0"
windrose = "1.8.1"
xarray = "2022.11.0"
geojsoncontour = "0.4.0"
streamlit-folium = "0.10.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
autopep8 = "^2.0.4"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
