[tool.poetry]
name = "wasserweise"
version = "0.1.0"
description = "A Python package for real-time groundwater monitoring"
authors = ["Saulo Silva Vieira <s.vieira@tutamail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.28.0"
geopandas = "^0.14.0"
gitpython = "^3.1.40"
matplotlib = "^3.8.0"
mplstereonet = "^0.6.2"
panel = "^1.3.0"
plotly = "^5.18.0"
pygithub = "^2.1.1"
requests = "^2.31.0"
scipy = "^1.11.3"
sqlalchemy = "^2.0.22"
windrose = "^1.9.0"
xarray = "^2023.10.1"
geojsoncontour = "^0.4.0"
streamlit-folium = "^0.15.0"
altair = "^5.1.2"
folium = "^0.14.0"
holoviews = "^1.18.0"
pyarrow = "^14.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
autopep8 = "^2.0.4"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
